# SPVD

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  sitecustomize.py
configs/: base.yaml  benchmark_eval.yaml  benchmark_eval_all_models.yaml  benchmark_eval_longcaption_repro_e20.yaml  benchmark_eval_pretrain_models.yaml  benchmark_eval_spvd_full_logits_bce_w001.yaml  benchmark_eval_spvd_full_logits_bce_w003.yaml  benchmark_eval_spvd_no_route_4gpu.yaml  eval_retrieval.yaml  train_cc3m_vitb16.yaml  train_spvd_text_cued_vitb16.yaml  zero_train_diagnostics.yaml
docs/: benchmark_eval.md  dataset_inspection.md  upstream_alignment.md
scripts/: launch_longcaption_repro_e20_benchmark.sh  run_benchmark_eval.sh  run_pretrain_eval_after_w003.sh  run_round1_spvd_ablation.sh  run_round1_spvd_full_logits_bce_8gpu.sh  run_round1_spvd_no_route_4gpu.sh  run_spvd_full_compile_then_benchmark.sh  run_w001_spvd_full_retrieval_8gpu.sh
sh/: run_spvd_full_ddp.sh  run_spvd_full_logits_bce_w001_tau2_ddp.sh  run_spvd_full_logits_bce_w003_tau2_ddp.sh  run_spvd_neg_only_route_ddp.sh  run_spvd_no_route_ddp.sh  run_spvd_no_soft_cue_ddp.sh  run_spvd_pos_only_route_ddp.sh
src/: checkpoint.py  clip_components.py  conditional_decomposition.py  data.py  diagnostics.py  distributed.py  factory.py  logger.py  losses.py  main.py  model.py  params.py  scheduler.py  soft_cue.py  tokenizer.py  training.py
tests/: test_dataset.py  test_forward.py  test_loss.py  test_routing_logits_bce.py  test_soft_cue_decomposition.py  test_spvd_forward.py  test_tokenizer.py
(+61 files in other folders)
